Force copy and rename